UDP Server tuning
Added sockets.js to add all the socket creation functions there.
Modified the socket code to server a greater good.

--- a/window.html
+++ b/window.html
@@ -9,6 +9,6 @@
   <button id="exit">Exit Fullscreen</button>
   <button id="test">Test</button>
   <script src="window.js"></script>
-  <script src="networking.js"></script>
+  <script src="sockets.js"></script>
 </body>
 </html>
