Server and Mobile working
Mobile data still jittery

--- a/window.html
+++ b/window.html
@@ -6,7 +6,10 @@
   <h1>Fullscreen sample</h1>
   Testing multiple display fullscreen.... :( Dosent work.... Hitting ctrl+maximise button is the current way... Right click -> inspect element->console
   <button id="enter">Enter Fullscreen</button>
-  <button id="exit">Exit Fullscreen</button><br />
+  <button id="exit">Exit Fullscreen</button>
+  <select id="hosts">
+    <option value="127.0.0.1">lo - 127.0.0.1</option> 
+  </select><br />
   <input type="file" id="files" name="files[]" multiple />
   <button id="test">Test</button>
   <script src="window.js"></script>
