--- a/window.html
+++ b/window.html
@@ -3,15 +3,12 @@
 <head>
 </head>
 <body>
-  <h1>Fullscreen sample</h1>
-  Testing multiple display fullscreen.... :( Dosent work.... Hitting ctrl+maximise button is the current way... Right click -> inspect element->console
-  <button id="enter">Enter Fullscreen</button>
-  <button id="exit">Exit Fullscreen</button>
+  <h1>Dodge Pong</h1>
+  
   <select id="hosts">
     <option value="127.0.0.1">lo - 127.0.0.1</option> 
   </select><br />
-  <input type="file" id="files" name="files[]" multiple />
-  <button id="test">Test</button>
+  Click to start : <button id="test">Start</button>
   <script src="window.js"></script>
   <script src="sockets.js"></script>
 </body>
